--- a/View/SignIn/style.css
+++ b/View/SignIn/style.css
@@ -9,57 +9,48 @@
 a {
   text-decoration: none;
 }
-.header {
+header { /*.header*/
   position: fixed;
-  height: 80px;
+  height: 9.25%;
   width: 100%;
-  z-index: 100;
-  padding: 0 20px;
   background: #06380c
 }
-.nav {
-  max-width: 1100px;
+nav { /*.nav*/
+  max-width: 75%;
   width: 100%;
   margin: 0 auto;
-}
-.nav,
-.nav_item {
-  display: flex;
-  height: 100%;
+  column-gap: 4%;
   align-items: center;
-  justify-content: space-between;
 }
-.nav_logo,
-.nav_link{
-    padding: 30px 10px;
-    color: #fff;
-}
-.button {
-  color: #fff;
-}
-.nav_logo {
+nav > a { /*.nav_logo*/
   font-size: 40px;
   font: 'Poppins';
-
 }
-.nav_item {
-  column-gap: 70px;
-  
+nav, ul, li { /*nav_item*/
+  display: flex;
+  height: 100%;
 }
-.nav_link:hover {
+nav, ul, li, a { /*nav_link*/
+  padding: 20px 20px;
+  color: #fff;
+  min-width: 100px;
+  text-align: center;
+  align-items: center;
+}
+li > a:hover {
   background: #fff;
   color: black;
-  
 }
-.button {
+button { /* Should this do something when hover? */
+  color: #fff;
   padding: 6px 24px;
   border: 2px solid #fff;
   background: transparent;
   border-radius: 6px;
   cursor: pointer;
 }
-.button:active {
-  transform: scale(0.98);
+button:active {
+  transform: scale(.95);
 }
 
 .home {
@@ -94,6 +85,7 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1.2);
+  transition: all 0.4s ease-out;
   z-index: 101;
   background: #fff;
   padding: 25px;
@@ -101,7 +93,7 @@ a {
   box-shadow: rgba(0, 0, 0, 0.1);
   opacity: 0;
   pointer-events: none;
-  transition: all 0.4s ease-out;
+  
 }
 .home.show .form_container {
   opacity: 1;
