--- a/View/SignIn/index.html
+++ b/View/SignIn/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <a href="#" class="nav_logo">Budget Bros</a>
+        <a href="index.html" class="nav_logo">Budget Bros</a>
 
         <ul class="nav_items">
           <li class="nav_item">
@@ -26,8 +26,18 @@
       </nav>
     </header>
 
+  
+
 
     <section class="home">
+      <div class="white-box">
+        <h1>Welcome to Budget Bros Inc.</h1>
+        <h2> Get the most bang for your buget</h2>
+        <p> Make quick updates to your budget, customize your own categories,<br>and organize your finances</p>
+
+        <button class="cn" id="form-open">SignUp</a></button>
+
+      </div>
       <div class="form_container">
         <i class="uil uil-times form_close"></i>
         <div class="form login_form">
@@ -83,10 +93,14 @@
           </form>
         </div>
       </div>
+      <div class="testbox">
+      
+      </div>
     </section>
     
 
-    <script src="script.js"></script>
+     <script defer src="script.js"></script>
+    
     
   </body>
 </html>
