--- a/NavBarTest/style.css
+++ b/NavBarTest/style.css
@@ -54,7 +54,7 @@ nav ul li a {
   min-width: 100px;
   text-align: center;
   align-items: center;
-  font-family: sans-serif;
+  font-family: georgia;
 }
 
 a:hover {
@@ -136,7 +136,7 @@ section {
   border: 2px solid #fff;
   background: transparent;
   border-radius: 10px;
-  font-family: sans-serif;
+  font-family: georgia;
   font-size: 20px;
 }
 
