--- a/NavBarTest/style.css
+++ b/NavBarTest/style.css
@@ -167,7 +167,7 @@ section {
   width: 220px;
   margin: 35px auto;
   position: relative;
-  box-shadow: 0 0 20px 9px #06380c;
+  box-shadow: 0 0 20px 9px #26272677;
   border-radius: 30px;
 }
 
