--- a/View/style.css
+++ b/View/style.css
@@ -21,11 +21,11 @@ table, td, th {
 #expenseTable {
   display: block;
   width: 50%;
-  padding-left: 10px;
+  padding: 0 10px;
   float: left;
 }
-#chart {
-  padding-right: 10px;
+#floatRight {
+  padding: 0 10px;
   width: 50%;
   float: right;
   display: block;
@@ -339,7 +339,12 @@ span {
 }
 
 /*Home Page CSS Code*/ 
-
+#clearFloat {
+  display: block;
+  width: 50%;
+  padding: 0 10px;
+  float: left;
+}
 .white-box {
   /* height: fit-content; */
   min-height: 50%;
