Fixed background wrap-around bug

--- a/View/style.css
+++ b/View/style.css
@@ -8,6 +8,12 @@
 
 body {
   font-family: montserrat;
+  background: url('CSUPIC.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100%;
 }
 /* about page */
 
