Fixed some grammar and changed graph colors

--- a/View/style.css
+++ b/View/style.css
@@ -142,27 +142,27 @@ table, td, th {
 }
 
 #color-red {
-  background-color: red;
+  background-color: #e3342f;
 }
 
 #color-orange {
-  background-color: orange;
+  background-color: #f6993f;
 }
 
 #color-yellow {
-  background-color: yellow;
+  background-color: #ffed4a;
 }
 
 #color-green {
-  background-color: green;
+  background-color: #38c172;
 }
 
 #color-blue {
-  background-color: blue;
+  background-color: #3490dc;
 }
 
 #color-black {
-  background-color: black;
+  background-color: #b8c2cc;
 }
 
 #color-brown {
